--- a/sobremi.html
+++ b/sobremi.html
@@ -16,9 +16,6 @@
     <link rel="stylesheet" href="css/style.css">
 
     <title>Adrián Castro UX UI designer</title>
-
-    <meta name="description"
-    content="Diseñador UX UI viviendo en CDMX, conoce mi trabajo y ponte en contacto conmigo">
   </head>
   
   <body class="d-flex flex-column min-vh-100">
@@ -30,11 +27,11 @@
 	  </button>
 	  <div class="collapse navbar-collapse" id="navbarNav">
 	    <ul class="navbar-nav ml-lg-auto">
-	      <li class="nav-item active">
-	        <a class="nav-link" href="index.html">Proyectos<span class="sr-only">(current)</span></a>
-	      </li>
 	      <li class="nav-item">
-	        <a class="nav-link" href="sobremi.html">Sobre mí</a>
+	        <a class="nav-link" href="index.html">Proyectos</a>
+	      </li>
+	      <li class="nav-item active">
+	        <a class="nav-link" href="sobremi.html">Sobre mí<span class="sr-only">(current)</span></a>
 	      </li>
 	      <li class="nav-item">
 	        <a class="nav-link" href="contacto.html">Contacto</a>
