--- a/proyecto_02.html
+++ b/proyecto_02.html
@@ -15,10 +15,11 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
 
-    <title>Adrián Castro UX UI designer</title>
+    <title>Dayli UI Challenge</title>
 
     <meta name="description"
-    content="Diseñador UX UI viviendo en CDMX, conoce mi trabajo y ponte en contacto conmigo">
+    content="Challenge diario para hacer UI, conoce algunos de los resultados">
+
   </head>
   
   <body class="d-flex flex-column min-vh-100">
