--- a/proyecto_03.html
+++ b/proyecto_03.html
@@ -15,10 +15,10 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
 
-    <title>Adrián Castro UX UI designer</title>
+    <title>Proyecto UX UI Terminal de estacionamiento</title>
 
     <meta name="description"
-    content="Diseñador UX UI viviendo en CDMX, conoce mi trabajo y ponte en contacto conmigo">
+    content="Caso de estudio, ¿Por qué los usuarios se equivocaban tan seguido al momento de hacer el pago?">
   </head>
   
   <body class="d-flex flex-column min-vh-100">
