--- a/contacto.html
+++ b/contacto.html
@@ -43,7 +43,39 @@
 
 	<main class="container flex-grow-1 min-vh-100 pt-5">
 		
-		<h1>Adrián Castro UX UI designer</h1>
+		<section class="row">
+			<article class="col-12 col-md-10 col-lg-6 mx-auto">
+				<h3 class="text-center my-5">¡Hola!</h3>
+
+				<p>Puedes contactarme directamente por medio de correo electrónico, llamarme o mandarme whatsapp.</p>
+
+				<p class="font-weight-bold">acastro.didg@gmail.com</p>
+
+				<p class="font-weight-bold">55 5101 6150</p>
+
+				<p class="mb-5">Si prefieres llena el formulario y yo me comunico contigo.</p>
+
+				<form class="mt-5" action="https://formsubmit.co/37f9d1526cd751dba4cb27bde2d42582" method="POST">
+					<label class="font-weight-bold" for="nombre">Nombre:</label>
+    				<input type="text" class="form-control back-gris border-0 mb-5" id="nombre">
+
+  					<label class="font-weight-bold" for="tel">Teléfono:</label>
+    				<input type="tel" class="form-control back-gris border-0 mb-5" id="tel">
+
+    				<label class="font-weight-bold" for="correo">e-mail:</label>
+    				<input type="email" class="form-control back-gris border-0 mb-5" id="correo">
+
+    				<label class="font-weight-bold" for="comentarios">Mensaje:</label><br>
+    				<textarea name="comentarios" id="comentarios" rows="6" class="form-control back-gris border-0 mb-5"></textarea>
+
+    				<input class="btn-rojo col-8 col-md-6 col-lg-4 py-3 px-5 mx-auto my-5 border-0" type="submit">
+
+
+				</form>
+				
+			</article>
+			
+		</section>
 	</main>
 
 	
@@ -58,18 +90,18 @@
 			<p>55 5101 6150</p>
 		</div>
 		<div class="container">
-			<div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-6 mt-5">
+			<div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-6 mt-lg-4 mt-5 ">
 				<ul class="list-unstyled d-flex justify-content-between h3">
-			        <li><a href="https://facebook.com" target="_blank"><i class="fab fa-instagram"></i></a></li>
-			        <li><a href="https://twitter.com" target="_blank"><i class="fab fa-linkedin"></i></a></li>
-			        <li><a href="https://instagram.com" target="_blank"><i class="fab fa-facebook"></i></a></li>
-			         <li><a href="https://instagram.com" target="_blank"><i class="fab fa-behance"></i></a></li>
-			          <li><a href="https://instagram.com" target="_blank"><i class="fab fa-dribbble"></i></a></li>
+			        <li><a href="https://www.instagram.com/adri_ryuusei/?hl=es" target="_blank"><i class="fab fa-instagram"></i></a></li>
+			        <li><a href="https://www.linkedin.com/public-profile/in/adrián-castro-pacheco-a8473b38/?challengeId=AQGFXLRYX2Mx7gAAAXSfVINgMMo2rd_AxtJP_NdTRFHF5bt8QwntZWrC1eN8TPfcWK_CrHG9PYY7uSvB2lXqTRvp9qERkbXpnQ&submissionId=619b3842-2fc4-3516-a637-ff3477d1500c" target="_blank"><i class="fab fa-linkedin"></i></a></li>
+			        <li><a href="https://www.facebook.com/AdriRyuusei" target="_blank"><i class="fab fa-facebook"></i></a></li>
+			         <li><a href="https://www.behance.net/adrian_castro" target="_blank"><i class="fab fa-behance"></i></a></li>
+			          <li><a href="https://dribbble.com/acastro_didg" target="_blank"><i class="fab fa-dribbble"></i></a></li>
 			        
 		    	 </ul>
 	      </div>
 		</div>
-		<div class="col-6 col-lg-1 ml-lg-auto ml-auto mt-5 mb-lg-5">
+		<div class="col-6 col-lg-1 ml-lg-auto ml-auto mt-lg-4 mt-5 pb-lg-5">
 		<a class="footer-flecha" href="#top"><img src="img/flecha_footer.svg" alt="regresar arriba"></a>
 		</div>
 
