--- a/index.html
+++ b/index.html
@@ -46,9 +46,65 @@
 
 	<main class="container flex-grow-1 min-vh-100 pt-5">
 		
-		<h1>Adrián Castro UX UI designer</h1>
+		<section class="col-12 col-md-5">
+	    	<h1 class="font-weight-bold" >Hola! <br> Soy Adrián Castro</h1>
+	    	<p class="font-weight-bold my-4">Diseñador UX UI viviendo en la Ciudad de México, actualmente trabajando como freelance.</p>
+	    	<p class="my-5">Puedes ver algunos de mis proyectos a continuación o conocer un poco más <a class="text-decoration-none text-muted" href="sobremi.html"> sobre mí <i class="fas fa-chevron-right text-rojo"></i></a> </p>
+    	</section>
+    	<div class="row">
+	    	<div class="mx-auto my-5">
+	    		<a href="#proyectos"><img src="img/flecha_proyectos.svg" alt=""></a>
+	    	</div>
+    	</div>
 	</main>
 
+	<section class="back-gris my-5" id="proyectos">
+		<article class="container">
+			<div class="col-12 py-5">
+				<h2 class="text-rojo titulo text-center">Caso de Estudio Aumento de ventas en Nikken</h2>
+				<div class="row">
+				<a class="btn-rojo col-8 col-md-6 col-lg-3 py-3 px-5 mx-auto my-5" href="proyecto_01.html">Ver proyecto</a>
+				</div>
+				<img class="img-fluid" src="img/img_nikken1.png" alt="Portada de proyecto Nikken">
+			</div>
+		</article>
+	</section>
+
+	<section class="back-gris my-5" id="proyectos">
+		<article class="container">
+			<div class="col-12 py-5">
+				<h2 class="text-rojo titulo text-center">Dayli UI Challenge</h2>
+				<div class="row">
+				<a class="btn-rojo col-8 col-md-6 col-lg-3 py-3 px-5 mx-auto my-5" href="proyecto_02.html">Ver proyecto</a>
+				</div>
+				<img class="img-fluid" src="img/dayliUI.jpg" alt="Portada de Dayli UI challenge">
+			</div>
+		</article>
+	</section>
+
+	<section class="back-gris my-5" id="proyectos">
+		<article class="container">
+			<div class="col-12 py-5">
+				<h2 class="text-rojo titulo text-center">Caso de Estudio Terminal de Estacionamiento</h2>
+				<div class="row">
+				<a class="btn-rojo col-8 col-md-6 col-lg-3 py-3 px-5 mx-auto my-5" href="proyecto_03.html">Ver proyecto</a>
+				</div>
+				<img class="img-fluid" src="img/img_estacionamiento.png" alt="Portada de Caso de estudio terminal de estacionamiento">
+			</div>
+		</article>
+	</section>
+
+		<section class="back-gris my-5" id="proyectos">
+		<article class="container">
+			<div class="col-12 py-5">
+				<h2 class="text-rojo titulo text-center">Dayli UI Challenge</h2>
+				<div class="row">
+				<a class="btn-rojo col-8 col-md-6 col-lg-3 py-3 px-5 mx-auto my-5" href="proyecto_04.html">Ver proyecto</a>
+				</div>
+				<img class="img-fluid" src="img/img_wysa.png" alt="Portada de Dayli UI challenge">
+			</div>
+		</article>
+	</section>
 	
 
 	<footer class="">
@@ -61,18 +117,18 @@
 			<p>55 5101 6150</p>
 		</div>
 		<div class="container">
-			<div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-6 mt-5">
+			<div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-6 mt-lg-4 mt-5 ">
 				<ul class="list-unstyled d-flex justify-content-between h3">
-			        <li><a href="https://facebook.com" target="_blank"><i class="fab fa-instagram"></i></a></li>
-			        <li><a href="https://twitter.com" target="_blank"><i class="fab fa-linkedin"></i></a></li>
-			        <li><a href="https://instagram.com" target="_blank"><i class="fab fa-facebook"></i></a></li>
-			         <li><a href="https://instagram.com" target="_blank"><i class="fab fa-behance"></i></a></li>
-			          <li><a href="https://instagram.com" target="_blank"><i class="fab fa-dribbble"></i></a></li>
+			        <li><a href="https://www.instagram.com/adri_ryuusei/?hl=es" target="_blank"><i class="fab fa-instagram"></i></a></li>
+			        <li><a href="https://www.linkedin.com/public-profile/in/adrián-castro-pacheco-a8473b38/?challengeId=AQGFXLRYX2Mx7gAAAXSfVINgMMo2rd_AxtJP_NdTRFHF5bt8QwntZWrC1eN8TPfcWK_CrHG9PYY7uSvB2lXqTRvp9qERkbXpnQ&submissionId=619b3842-2fc4-3516-a637-ff3477d1500c" target="_blank"><i class="fab fa-linkedin"></i></a></li>
+			        <li><a href="https://www.facebook.com/AdriRyuusei" target="_blank"><i class="fab fa-facebook"></i></a></li>
+			         <li><a href="https://www.behance.net/adrian_castro" target="_blank"><i class="fab fa-behance"></i></a></li>
+			          <li><a href="https://dribbble.com/acastro_didg" target="_blank"><i class="fab fa-dribbble"></i></a></li>
 			        
 		    	 </ul>
 	      </div>
 		</div>
-		<div class="col-6 col-lg-1 ml-lg-auto ml-auto mt-5 mb-lg-5">
+		<div class="col-6 col-lg-1 ml-lg-auto ml-auto mt-lg-4 mt-5 pb-lg-5">
 		<a class="footer-flecha" href="#top"><img src="img/flecha_footer.svg" alt="regresar arriba"></a>
 		</div>
 
