--- a/proyecto_01.html
+++ b/proyecto_01.html
@@ -44,9 +44,149 @@
 	  </div>
 	</nav>
 
+	<div class="min-vh-100 proyecto1_cover ">
+
+		<div class="col-8 mx-auto min-vh-100 d-flex ">
+			<h2 class="text-white font-weight-bold text-center align-items-center d-flex align-content-between flex-wrap mx-auto titulo">Caso de Estudio Aumento de ventas en Nikken</h2>
+			
+		</div>
+		
+	</div>
+
 	<main class="container flex-grow-1 min-vh-100 pt-5">
 		
-		<h1>Adrián Castro UX UI designer</h1>
+		<div class="col-12 col-md-10 mx-auto my-5">
+		<span class="descripcion">El brief propone realizar una aplicación de seguimiento para aumentar las ventas, ¿qué nos dijo la investigación?</span>
+		</div>
+
+		<div class="col-12 col-md-4 my-5">
+			<p class="font-weight-bold">¿Qué hicimos?</p>
+			<ul  class="list-unstyled">
+				<li>Entrevistas con usuarios</li>
+				<li>Journey Map</li>
+				<li>User Persona</li>
+				<li>Definición</li>
+				<li>Ideación</li>
+			</ul>
+		</div>
+
+		<section class="row">
+			<div class="col-12">
+				<h2 class="text-center font-weight-bold my-5">Perspectiva general del proyecto</h2>
+			</div>
+			<article class="col12 col-md-3">
+				<div class="tamano-img mx-auto">
+					<img class="img-fluid " src="img/nikken/nikken_01_01.svg" alt="">
+				</div>
+				<h4 class="font-weight-bold text-center">Descripción</h4>
+				<div>
+					<p class="back-contenido p-3">Elaboración de una aplicación donde nuestros colaboradores puedan dar seguimiento de sus pedidos.</p>
+				</div>
+			</article>
+
+			<article class="col12 col-md-3">
+				<div class="tamano-img mx-auto">
+					<img class="img-fluid " src="img/nikken/nikken_01_02.svg" alt="">
+				</div>
+				<h4 class="font-weight-bold text-center">Antecedentes</h4>
+				<div>
+					<p class="back-contenido p-3">Muchas personas que trabajan vendiendo nuestros productos, se han estado quejando mucho de no tener alguna manera de llevar su registro de ventas más fácil. Esto hace que tengan que usar otros medios, volviendo un paso adicional.</p>
+				</div>
+			</article>
+
+			<article class="col12 col-md-3">
+				<div class="tamano-img mx-auto">
+					<img class="img-fluid " src="img/nikken/nikken_01_03.svg" alt="">
+				</div>
+				<h4 class="font-weight-bold text-center">Objetivos</h4>
+				<div>
+					<p class="back-contenido p-3">Incrementar el número de ventas de nuestros colaboradores <br><br>
+					Facilitar el proceso de seguimiento de pedidos <br><br>
+					Tener un orden general en nuestro inventario</p>
+				</div>
+			</article>
+
+			<article class="col12 col-md-3">
+				<div class="tamano-img mx-auto">
+					<img class="img-fluid " src="img/nikken/nikken_01_04.svg" alt="">
+				</div>
+				<h4 class="font-weight-bold text-center">KPI's</h4>
+				<div>
+					<p class="back-contenido p-3">De 50 ventas que tenemos semanalmente, queremos subir a 70 semanales <br><br>
+					Optimizar los tiempos de entrega en un 20%</p>
+				</div>
+			</article>
+		</section>
+
+		<section class="row">
+			<article class="col-12 col-lg-10 mx-auto">
+				<h3 class="text-center font-weight-bold my-5">¿Para qué hicimos una investigación?</h3>	
+				<ul class="list-unstyled">
+					<li class="my-2">- Empatizar con los tusuarios para saber a quién le estamos diseñando</li>
+					<li class="my-2">- Entender cómo son sus procesos al realizar las tareas que implica el proceso de venta en Nikken </li>
+					<li class="my-2">- Comprender sus preocupaciones y los problemas que enfrentan, así como sus motivaciones</li>
+				</ul>
+			</article>
+		</section>
+
+		<section class="row">
+			
+			<article class="col12 col-md-2 mt-5">
+				<div class="tamano-img mx-auto">
+					<img class="img-fluid " src="img/nikken/nikken_02_01.svg" alt="">
+				</div>
+				<h4 class="font-weight-bold text-center">Entrevistas</h4>
+			</article>
+
+			<article class="col12 col-md-2 mt-5">
+				<div class="tamano-img mx-auto">
+					<img class="img-fluid " src="img/nikken/nikken_02_02.svg" alt="">
+				</div>
+				<h4 class="font-weight-bold text-center">User Persona</h4>
+			</article>
+
+			<article class="col12 col-md-2 mt-5">
+				<div class="tamano-img mx-auto">
+					<img class="img-fluid " src="img/nikken/nikken_02_03.svg" alt="">
+				</div>
+				<h4 class="font-weight-bold text-center">Journey Map</h4>
+			</article>
+
+			<article class="col12 col-md-2 mt-5">
+				<div class="tamano-img mx-auto">
+					<img class="img-fluid " src="img/nikken/nikken_02_04.svg" alt="">
+				</div>
+				<h4 class="font-weight-bold text-center">Definición</h4>
+			</article>
+
+			<article class="col12 col-md-2 mt-5">
+				<div class="tamano-img mx-auto">
+					<img class="img-fluid " src="img/nikken/nikken_02_05.svg" alt="">
+				</div>
+				<h4 class="font-weight-bold text-center">Ideación</h4>
+			</article>
+
+		<section class="row">
+			<article class="col-12 col-lg-10 mx-auto">
+				<h3 class="text-center font-weight-bold my-5">Sobre las entrevistas</h3>	
+				<ul class="list-unstyled">
+					<li class="my-2">- Entrevistamos a mujeres vendedoras de Nikken de 20 a 45 años de diferentes niveles en la pirámide que sean miembros activos y que estén familiarizadas con el proceso de venta de la empresa</li>
+					<li class="my-2">- Queremos conocer el contexto en el que se desenvuelven los usuarios, cuál es su proceso de venta, qué les motiva,  qué les incomoda, qué problemas enfrentan en el proceso</li>
+				</ul>
+
+				<img class="img-fluid" src="img/nikken/entrevista.png" alt="">
+			</article>
+		</section>
+
+		<section class="row">
+			<article class="col-12 col-lg-10 mx-auto">
+				<h3 class="text-center font-weight-bold my-5">Sobre las entrevistas</h3>	
+
+				<img class="img-fluid" src="img/nikken/entrevista.png" alt="">
+			</article>
+		</section>
+			
+		
 	</main>
 
 	
@@ -61,18 +201,18 @@
 			<p>55 5101 6150</p>
 		</div>
 		<div class="container">
-			<div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-6 mt-5">
+			<div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-6 mt-lg-4 mt-5 ">
 				<ul class="list-unstyled d-flex justify-content-between h3">
-			        <li><a href="https://facebook.com" target="_blank"><i class="fab fa-instagram"></i></a></li>
-			        <li><a href="https://twitter.com" target="_blank"><i class="fab fa-linkedin"></i></a></li>
-			        <li><a href="https://instagram.com" target="_blank"><i class="fab fa-facebook"></i></a></li>
-			         <li><a href="https://instagram.com" target="_blank"><i class="fab fa-behance"></i></a></li>
-			          <li><a href="https://instagram.com" target="_blank"><i class="fab fa-dribbble"></i></a></li>
+			        <li><a href="https://www.instagram.com/adri_ryuusei/?hl=es" target="_blank"><i class="fab fa-instagram"></i></a></li>
+			        <li><a href="https://www.linkedin.com/public-profile/in/adrián-castro-pacheco-a8473b38/?challengeId=AQGFXLRYX2Mx7gAAAXSfVINgMMo2rd_AxtJP_NdTRFHF5bt8QwntZWrC1eN8TPfcWK_CrHG9PYY7uSvB2lXqTRvp9qERkbXpnQ&submissionId=619b3842-2fc4-3516-a637-ff3477d1500c" target="_blank"><i class="fab fa-linkedin"></i></a></li>
+			        <li><a href="https://www.facebook.com/AdriRyuusei" target="_blank"><i class="fab fa-facebook"></i></a></li>
+			         <li><a href="https://www.behance.net/adrian_castro" target="_blank"><i class="fab fa-behance"></i></a></li>
+			          <li><a href="https://dribbble.com/acastro_didg" target="_blank"><i class="fab fa-dribbble"></i></a></li>
 			        
 		    	 </ul>
 	      </div>
 		</div>
-		<div class="col-6 col-lg-1 ml-lg-auto ml-auto mt-5 mb-lg-5">
+		<div class="col-6 col-lg-1 ml-lg-auto ml-auto mt-lg-4 mt-5 pb-lg-5">
 		<a class="footer-flecha" href="#top"><img src="img/flecha_footer.svg" alt="regresar arriba"></a>
 		</div>
 
@@ -83,6 +223,8 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+
+    <!-- Go to www.addthis.com/dashboard to customize your tools --> <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5f642c35b6df281d"></script>
   </body>
 
 </html>
