--- a/proyecto_03.html
+++ b/proyecto_03.html
@@ -44,9 +44,23 @@
 	  </div>
 	</nav>
 
-	<main class="container flex-grow-1 min-vh-100 pt-5">
+
 		
-		<h1>Adrián Castro UX UI designer</h1>
+	<div class="min-vh-100 proyecto3_cover ">
+
+		<div class="col-8 mx-auto min-vh-100 d-flex ">
+			<h2 class="text-white font-weight-bold text-center align-items-center d-flex align-content-between flex-wrap mx-auto titulo">Sección en construcción</h2>
+			
+		</div>
+
+				<div class="row">
+				<a class="btn-rojo col-8 col-md-6 col-lg-3 py-3 px-5 mx-auto" href="index.html">Regresar</a>
+				</div>
+		
+	</div>
+
+		<main class="container flex-grow-1 min-vh-100 pt-5">
+
 	</main>
 
 	
@@ -61,18 +75,18 @@
 			<p>55 5101 6150</p>
 		</div>
 		<div class="container">
-			<div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-6 mt-5">
+			<div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-6 mt-lg-4 mt-5 ">
 				<ul class="list-unstyled d-flex justify-content-between h3">
-			        <li><a href="https://facebook.com" target="_blank"><i class="fab fa-instagram"></i></a></li>
-			        <li><a href="https://twitter.com" target="_blank"><i class="fab fa-linkedin"></i></a></li>
-			        <li><a href="https://instagram.com" target="_blank"><i class="fab fa-facebook"></i></a></li>
-			         <li><a href="https://instagram.com" target="_blank"><i class="fab fa-behance"></i></a></li>
-			          <li><a href="https://instagram.com" target="_blank"><i class="fab fa-dribbble"></i></a></li>
+			        <li><a href="https://www.instagram.com/adri_ryuusei/?hl=es" target="_blank"><i class="fab fa-instagram"></i></a></li>
+			        <li><a href="https://www.linkedin.com/public-profile/in/adrián-castro-pacheco-a8473b38/?challengeId=AQGFXLRYX2Mx7gAAAXSfVINgMMo2rd_AxtJP_NdTRFHF5bt8QwntZWrC1eN8TPfcWK_CrHG9PYY7uSvB2lXqTRvp9qERkbXpnQ&submissionId=619b3842-2fc4-3516-a637-ff3477d1500c" target="_blank"><i class="fab fa-linkedin"></i></a></li>
+			        <li><a href="https://www.facebook.com/AdriRyuusei" target="_blank"><i class="fab fa-facebook"></i></a></li>
+			         <li><a href="https://www.behance.net/adrian_castro" target="_blank"><i class="fab fa-behance"></i></a></li>
+			          <li><a href="https://dribbble.com/acastro_didg" target="_blank"><i class="fab fa-dribbble"></i></a></li>
 			        
 		    	 </ul>
 	      </div>
 		</div>
-		<div class="col-6 col-lg-1 ml-lg-auto ml-auto mt-5 mb-lg-5">
+		<div class="col-6 col-lg-1 ml-lg-auto ml-auto mt-lg-4 mt-5 pb-lg-5">
 		<a class="footer-flecha" href="#top"><img src="img/flecha_footer.svg" alt="regresar arriba"></a>
 		</div>
 
