--- a/sobremi.html
+++ b/sobremi.html
@@ -41,9 +41,122 @@
 	  </div>
 	</nav>
 
-	<main class="container flex-grow-1 min-vh-100 pt-5">
+	<main class="container flex-grow-1 min-vh-100 pt-5">		
+		<section class="row">
+			<div class="col-10 col-md-4 mx-auto">
+				<img class="img-fluid rounded-circle mx-auto d-block" src="img/foto_cv.jpg" alt="Foto Adrián Castro">
+			</div>
+
+			<div class="col-12 col-md-8">
+
+				<h3 class="font-weight-bold">Adrián Castro</h3>
+				<p>Diseñador UX UI <br> CDMX </p>
+				<p>He desarrollado productos digitales gran parte de mi carrera profesional, me apasiona resolver problemas a través del diseño.</p>
+
+				<p>Graduado de la licenciatura en Diseño Digital, actualmente cursando una maestría en Comunicación con Medios Virtuales.</p>
+
+				<p>Disfruto mucho lo que hago, el diseño me ha llevado a ver la vida con asombro continuo.</p>
+
+				<div class="row">
+				<a class="btn-rojo col-8 col-md-6 col-lg-4 py-3 px-5 mx-auto my-4" href="docs/cv_adrian_castro2020.pdf">Descargar CV</a>
+
+				</div>
+			</div>	
+		</section>
+
+		<section class="flex-row d-md-flex my-5">
+
+			<div class="col-12 col-md-4 back-gris mx-2 p-3 my-3">
+				<p class="font-weight-bold">Habilidades</p>
+				<ul class="list-unstyled">
+					<li>Entrevistas con usuarios</li>
+					<li>Journey Map</li>
+					<li>User Persona</li>
+					<li>Wireframes</li>
+					<li>Wireflows</li>
+					<li>Sketching</li>
+					<li>Prototipado interactivo</li>
+					<li>Testeo con usuarios</li>
+				</ul>
+			</div>
+
+			<div class="col-12 col-md-4 back-gris mx-2 p-3 my-3">
+				<p class="font-weight-bold">Herramientas</p>
+				<ul class="list-unstyled">
+					<li>Lápiz y papel</li>
+					<li>Figma</li>
+					<li>Adobe XD</li>
+					<li>Invision</li>
+					<li>Photoshop</li>
+					<li>Illustrator</li>
+					<li>After Effects</li>
+				</ul>
+			</div>
+
+			<div class="col-12 col-md-4 back-gris mx-2 p-3 my-3">
+				<p class="font-weight-bold">Tecnologías</p>
+				<ul class="list-unstyled">
+					<li>Html</li>
+					<li>Css</li>
+				</ul>
+			</div>
 		
-		<h1>Adrián Castro UX UI designer</h1>
+		</section>
+
+		<section>
+
+			<article class="col-12 col-md-10 mx-auto my-5">
+				<h3>Freelance</h3>
+				<p class="texto-gris">Diseñador Multimedia, diciembre de 2018 a actual</p>
+				<p>Desarrollo de materiales educativos - edición de video - animación - branding - diseño instruccional - diseño web - ilustración - contenido para redes sociales.</p>
+			</article>
+
+			<article class="col-12 col-md-10 mx-auto my-5">
+				<h3>PwC</h3>
+				<p class="texto-gris">Diseñador Multimedia Senior, agosto de 2014 a noviembre de 2018</p>
+				<p>Desarrollo de materiales educativos - edición de video - animación - diseño de materiales impresos - ilustración - comunicación interna.</p>
+			</article>
+
+			<article class="col-12 col-md-10 mx-auto my-5">
+				<h3>SCI Interactive</h3>
+				<p class="texto-gris">Diseñador Multimedia, marzo de 2013 a mayo de 2014</p>
+				<p>Desarrollo de materiales educativos - edición de video - animación - branding.</p>
+			</article>
+
+			<article class="col-12 col-md-10 mx-auto my-5">
+				<h3>Instituto de Educación Media Superior</h3>
+				<p class="texto-gris">Diseñador Multimedia, enero de 2012 a febrero de 2013</p>
+				<p>Desarrollo de materiales educativos - desarrollos 3D - animación.</p>
+			</article>
+
+			<article class="col-12 col-md-10 mx-auto my-5">
+				<h3>Dragón Barbudo</h3>
+				<p class="texto-gris">Diseñador Digital, julio de 2011 a enero de 2012</p>
+				<p>Desarrollo web - desarrollo 3D - animación - branding.</p>
+			</article>
+
+		</section>
+
+		<section class="flex-row d-md-flex my-5">
+			<article class="col-12 col-md-6 back-gris p-3 mx-2">
+				<h3 class="pb-2">Educación</h3>
+				<p class="texto-gris">2020 - actual ICONOS Instituto de Investigación en Comunicación y Cultura</p>
+				<p>Maestría en Comunicación con Medios Virtuales</p>
+				<p class="texto-gris">2008 -2011 ICONOS Instituto de Investigación en Comunicación y Cultura</p>
+				<p>Licenciatura en Diseño Digital</p>
+			</article>
+
+			<article class="col-12 col-md-6 back-gris p-3 mx-2">
+				<h3 class="pb-2">Cursos y Diplomados</h3>
+				<p class="texto-gris">2016 MST Design school</p>
+				<p>Diplomado en concept art</p>
+				<p class="texto-gris">2019 MST Design school</p>
+				<p>LDiplomado en diseño de Art toys</p>
+			</article>
+		</section>
+
+
+
 	</main>
 
 	
@@ -58,18 +171,18 @@
 			<p>55 5101 6150</p>
 		</div>
 		<div class="container">
-			<div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-6 mt-5">
+			<div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-6 mt-lg-4 mt-5 ">
 				<ul class="list-unstyled d-flex justify-content-between h3">
-			        <li><a href="https://facebook.com" target="_blank"><i class="fab fa-instagram"></i></a></li>
-			        <li><a href="https://twitter.com" target="_blank"><i class="fab fa-linkedin"></i></a></li>
-			        <li><a href="https://instagram.com" target="_blank"><i class="fab fa-facebook"></i></a></li>
-			         <li><a href="https://instagram.com" target="_blank"><i class="fab fa-behance"></i></a></li>
-			          <li><a href="https://instagram.com" target="_blank"><i class="fab fa-dribbble"></i></a></li>
+			        <li><a href="https://www.instagram.com/adri_ryuusei/?hl=es" target="_blank"><i class="fab fa-instagram"></i></a></li>
+			        <li><a href="https://www.linkedin.com/public-profile/in/adrián-castro-pacheco-a8473b38/?challengeId=AQGFXLRYX2Mx7gAAAXSfVINgMMo2rd_AxtJP_NdTRFHF5bt8QwntZWrC1eN8TPfcWK_CrHG9PYY7uSvB2lXqTRvp9qERkbXpnQ&submissionId=619b3842-2fc4-3516-a637-ff3477d1500c" target="_blank"><i class="fab fa-linkedin"></i></a></li>
+			        <li><a href="https://www.facebook.com/AdriRyuusei" target="_blank"><i class="fab fa-facebook"></i></a></li>
+			         <li><a href="https://www.behance.net/adrian_castro" target="_blank"><i class="fab fa-behance"></i></a></li>
+			          <li><a href="https://dribbble.com/acastro_didg" target="_blank"><i class="fab fa-dribbble"></i></a></li>
 			        
 		    	 </ul>
 	      </div>
 		</div>
-		<div class="col-6 col-lg-1 ml-lg-auto ml-auto mt-5 mb-lg-5">
+		<div class="col-6 col-lg-1 ml-lg-auto ml-auto mt-lg-4 mt-5 pb-lg-5">
 		<a class="footer-flecha" href="#top"><img src="img/flecha_footer.svg" alt="regresar arriba"></a>
 		</div>
 
