--- a/proyecto_02.html
+++ b/proyecto_02.html
@@ -45,9 +45,86 @@
 	  </div>
 	</nav>
 
+	<div class="min-vh-100 proyecto2_cover ">
+
+		<div class="col-8 mx-auto min-vh-100 d-flex ">
+			<h2 class="text-white font-weight-bold text-center align-items-center d-flex align-content-between flex-wrap mx-auto titulo">Dayli UI Challenge</h2>
+			
+		</div>
+		
+	</div>
+
 	<main class="container flex-grow-1 min-vh-100 pt-5">
 		
-		<h1>Adrián Castro UX UI designer</h1>
+
+		<div class="col-12 col-md-10 mx-auto my-5">
+		<span class="descripcion">Es un challenge con retos diarios de diseño de interfaces para practicar, en esta sección estaré compartiendo algunos resultados.</span>
+		</div>
+
+		<div class="col-12">
+				<h2 class="text-center font-weight-bold my-5">Día 001 Sign up</h2>
+			</div>
+
+		<div class="col-12 col-md-4 my-5">
+
+			<p>Resgistro de una aplicación para meditar.</p>
+			<p class="font-weight-bold">Herramientas:</p>
+			<ul  class="list-unstyled">
+				<li>Lápiz y papel</li>
+				<li>Illustrator</li>
+				<li>Adobe XD</li>
+				<li>Photoshop</li>
+				<li>After Effects</li>
+			</ul>
+		</div>
+
+		<div class="embed-responsive embed-responsive-16by9 my-5">
+			<video class="embed-responsive-item" src="video/mpckup_001_v3_c.mp4" controls=""></video>
+		</div>
+
+		<div class="col-12">
+				<h2 class="text-center font-weight-bold my-5">Día 002 Credit Card Checkout</h2>
+			</div>
+
+		<div class="col-12 col-md-4 my-5">
+
+			<p>RDiseño de interfaz para proceso de pagar con tarjeta.</p>
+			<p class="font-weight-bold">Herramientas:</p>
+			<ul  class="list-unstyled">
+				<li>Lápiz y papel</li>
+				<li>Adobe XD</li>
+				<li>Photoshop</li>
+				<li>After Effects</li>
+			</ul>
+		</div>
+
+		<img class="img-fluid" src="img/dayli_ui_proyecto02.jpg" alt="">
+
+		<div class="embed-responsive embed-responsive-16by9 my-5">
+			<video class="embed-responsive-item" src="video/dayliUI_002.mp4" controls=""></video>
+		</div>
+
+
+		<div class="col-12">
+		<h2 class="text-center font-weight-bold my-5">Día 002 Credit Card Checkout</h2>
+			</div>
+
+		<div class="col-12 col-md-4 my-5">
+
+			<p>RDiseño de interfaz para proceso de pagar con tarjeta.</p>
+			<p class="font-weight-bold">Herramientas:</p>
+			<ul  class="list-unstyled">
+				<li>Lápiz y papel</li>
+				<li>Adobe XD</li>
+				<li>Photoshop</li>
+				<li>After Effects</li>
+			</ul>
+		</div>
+
+		<img class="img-fluid mb-5" src="img/dayli_ui_proyecto03.jpg" alt="">
+
+
+
 	</main>
 
 	
@@ -62,18 +139,18 @@
 			<p>55 5101 6150</p>
 		</div>
 		<div class="container">
-			<div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-6 mt-5">
+			<div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-6 mt-lg-4 mt-5 ">
 				<ul class="list-unstyled d-flex justify-content-between h3">
-			        <li><a href="https://facebook.com" target="_blank"><i class="fab fa-instagram"></i></a></li>
-			        <li><a href="https://twitter.com" target="_blank"><i class="fab fa-linkedin"></i></a></li>
-			        <li><a href="https://instagram.com" target="_blank"><i class="fab fa-facebook"></i></a></li>
-			         <li><a href="https://instagram.com" target="_blank"><i class="fab fa-behance"></i></a></li>
-			          <li><a href="https://instagram.com" target="_blank"><i class="fab fa-dribbble"></i></a></li>
+			        <li><a href="https://www.instagram.com/adri_ryuusei/?hl=es" target="_blank"><i class="fab fa-instagram"></i></a></li>
+			        <li><a href="https://www.linkedin.com/public-profile/in/adrián-castro-pacheco-a8473b38/?challengeId=AQGFXLRYX2Mx7gAAAXSfVINgMMo2rd_AxtJP_NdTRFHF5bt8QwntZWrC1eN8TPfcWK_CrHG9PYY7uSvB2lXqTRvp9qERkbXpnQ&submissionId=619b3842-2fc4-3516-a637-ff3477d1500c" target="_blank"><i class="fab fa-linkedin"></i></a></li>
+			        <li><a href="https://www.facebook.com/AdriRyuusei" target="_blank"><i class="fab fa-facebook"></i></a></li>
+			         <li><a href="https://www.behance.net/adrian_castro" target="_blank"><i class="fab fa-behance"></i></a></li>
+			          <li><a href="https://dribbble.com/acastro_didg" target="_blank"><i class="fab fa-dribbble"></i></a></li>
 			        
 		    	 </ul>
 	      </div>
 		</div>
-		<div class="col-6 col-lg-1 ml-lg-auto ml-auto mt-5 mb-lg-5">
+		<div class="col-6 col-lg-1 ml-lg-auto ml-auto mt-lg-4 mt-5 pb-lg-5">
 		<a class="footer-flecha" href="#top"><img src="img/flecha_footer.svg" alt="regresar arriba"></a>
 		</div>
 
@@ -84,6 +161,8 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+
+    <!-- Go to www.addthis.com/dashboard to customize your tools --> <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5f642c35b6df281d"></script>
   </body>
 
 </html>
